bootstrapping/dataloader/02-kafka-data-loader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-producer 
  namespace: default
  labels:
    app: simple-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-producer
  template:
    metadata:
      labels:
        app: simple-producer 
    spec:
      containers:
      - name: simple-producer-pod
        image: hschwrz/simple-producer:1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 250Mi
            cpu: 250m
          requests:
            memory: 0Mi
            cpu: 100m
