bootstrapping/dataloader/03-kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /redpanda
            pathType: Prefix
            backend:
              service:
                name: redpenda
                port:
                  number: 8080
